# product-api/handlers/put.go
@@ -10,7 +10,7 @@ import (
 // Update a products details
 //
 // responses:
-//	201: noContentResponse
+//		201: noContentResponse
 //  404: errorResponse
 //  422: errorValidation
 
