# product-api/swagger.yaml
@@ -1,33 +1,59 @@
-basePath: /
-consumes:
-- application/json
 definitions:
+  GenericError:
+    description: GenericError is a generic message returned by a server
+    properties:
+      message:
+        type: string
+        x-go-name: Message
+    type: object
+    x-go-package: github.com/jimil749/go-microservices-practice/product-api/handlers
   Product:
-    description: Product struct
+    description: Product defines the structure for an API product
     properties:
       description:
+        description: the description for this poduct
+        maxLength: 10000
         type: string
         x-go-name: Description
       id:
+        description: the id for the product
         format: int64
+        minimum: 1
         type: integer
         x-go-name: ID
       name:
+        description: the name for this poduct
+        maxLength: 255
         type: string
         x-go-name: Name
       price:
+        description: the price for the product
         format: float
+        minimum: 0.01
         type: number
         x-go-name: Price
       sku:
+        description: the SKU for the product
+        pattern: '[a-z]+-[a-z]+-[a-z]+'
         type: string
         x-go-name: SKU
+    required:
+    - name
+    - price
+    - sku
     type: object
     x-go-package: github.com/jimil749/go-microservices-practice/product-api/data
-info:
-  description: Documentation for Product API
-  title: of Product API
-  version: 1.0.0
+  ValidationError:
+    description: ValidationError is a collection of validation error messages
+    properties:
+      message:
+        items:
+          type: string
+        type: array
+        x-go-name: Messages
+    type: object
+    x-go-package: github.com/jimil749/go-microservices-practice/product-api/handlers
+info: {}
 paths:
   /products:
     get:
@@ -38,33 +64,54 @@ paths:
           $ref: '#/responses/productsResponse'
       tags:
       - products
+    post:
+      description: Create a new product
+      operationId: createProduct
+      responses:
+        "200":
+          $ref: '#/responses/productResponse'
+        "422":
+          $ref: '#/responses/errorValidation'
+        "501":
+          $ref: '#/responses/errorResponse'
+      tags:
+      - products
+    put:
+      description: Update a products details
+      operationId: updateProduct
+      responses:
+        "201":
+          $ref: '#/responses/noContentResponse'
+        "404":
+          $ref: '#/responses/errorResponse'
+        "422":
+          $ref: '#/responses/errorValidation'
+      tags:
+      - products
   /products/{id}:
     delete:
-      description: Returns a list of products
+      description: Update a list of products
       operationId: deleteProducts
-      parameters:
-      - description: The id of the product to delete from database
-        format: int64
-        in: path
-        name: id
-        required: true
-        type: integer
-        x-go-name: ID
       responses:
         "201":
           $ref: '#/responses/noContent'
+        "404":
+          $ref: '#/responses/errorResponse'
       tags:
       - products
-produces:
-- application/json
 responses:
-  noContent: {}
+  errorResponse:
+    description: Generic error message returned as a string
+    schema:
+      $ref: '#/definitions/GenericError'
+  errorValidation:
+    description: Validation errors defined as an array of strings
+    schema:
+      $ref: '#/definitions/ValidationError'
   productsResponse:
     description: A list of products returns in the response
     schema:
       items:
         $ref: '#/definitions/Product'
       type: array
-schemes:
-- http
 swagger: "2.0"
